# scarecrow

./: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
scarecrow/: cli.py  generate.py  io.py  model.py  ocr.py  optimize.py
scarecrow/data/: __init__.py
tests/: test_generate.py  test_model.py
