[project]
name = "scarecrow-alpr"
version = "0.2.0"
description = "An adversarial frame pattern optimizer for evading automated license plate recognition, personalized to your plate."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only AND AGPL-3.0-only"
license-files = ["LICENSE", "LICENSES/AGPL-3.0-only.txt", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "Max Harari" }]
dependencies = [
    "torch>=2.11",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
ocr = ["rapidocr-onnxruntime>=1.4"]

[project.urls]
Repository = "https://github.com/Meltedd/scarecrow"

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "scarecrow"
module-root = ""
source-include = ["tests/**", "test_plate.jpg"]

[project.scripts]
scarecrow = "scarecrow.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
